tests/typechecker/should_pass/extensions_unsafe.csp
Z = let extensions(x) = x within extensions({})
