tests/typechecker/should_fail/timed_sections1.csp
f(_) = True

Timed (f) {
    
}